@@ -109,15 +109,27 @@ oscilloscopes.  Both methods will provide the monitoring object with an updated 
 of the number of bytes read from the instrument. If monitoring object is a progress
 bar, the progress bar must be initialized with the total number of bytes to be
 downloaded from the instrument. The monitoring object must implement the update()
-method. See the tqdm package documentation for more information. An implementation
-of a progress bar might look like:
+method. See the tqdm package documentation for more information.
+
+A helper function (pyvisa.util.message_length) can be used to calculate the total
+number of bytes in a data transfer, including the header and termination character.
+
+An implementation of a progress bar might look like:
 
 .. code:: python
 
+    from pyvisa import resource_manager
+    from pyvisa.util import message_length
+
     inst = resource_manager.open_resource(...)
-        with tqdm(desc="Downloading", unit="B", total=total_bytes) as progress_bar:
-            inst.write("CURV?")
-            data = inst.read_binary_values(monitoring_interface=progress_bar)
+
+    # calculate the total number of bytes to download
+    total_bytes = message_length(num_points=1000, point_size=2, header_format="ieee")
+
+    # create a download monitor and use it when downloading data
+    with tqdm(desc="Downloading", unit="B", total=total_bytes) as progress_bar:
+        inst.write("CURV?")
+        data = inst.read_binary_values(monitoring_interface=progress_bar)
 
 If you can read without any problem from your instrument, but cannot retrieve
 the full message when using this method (VI_ERROR_CONN_LOST,
